ola-parser/src/testdata/syntaxTests/comments/unicode_direction_in_source_2.sol
contract C {
    fn f(bool b) 
    {
        u256 a = 10; ‬
    }
}
// ----
// ParserError 8936: (75-76): Invalid token.
